# iagdados

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.tmp_dagster_home_wra2hhgy/history/: runs.db
.tmp_dagster_home_wra2hhgy/history/runs/: index.db
.tmp_dagster_home_wra2hhgy/schedules/: schedules.db
dagster_home/: workspace.yml
src/iag/data/raw/: raw_items.parquet
src/iag/data/silver/: silver_items.parquet
src/iag/defs/comprasgov/: assets.py  definitions.py  jobs.py  resources.py
