[project]
name = "iag"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.0",
    "dagster-sqlalchemy>=0.3.5",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pymysql>=1.1.2",
    "requests-tor>=1.4",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "iag"
registry_modules = [
    "iag.components.*",
]


